# python-chi

./: .gitignore  .mailmap  .readthedocs.yml  AUTHORS  ApplianceReview.ipynb  ChameleonLifecycle.ipynb  ChangeLog  DEVELOPMENT.rst  LICENSE.md  MANIFEST.in  Makefile  NeutronNovaQuotas.ipynb  README.md  README.rst  RemoteBuild.ipynb  StackManager.ipynb  ccbuild.py  ccm-requirements.txt  chameleon.py  puppet.pp  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py  tasks.py  test-requirements.txt  tox.ini
.github/: CODEOWNERS
.github/workflows/: linting.yml  pypi-publish.yml  test.yml
ccmanage/: auth.py  lease.py  quicknode.py  secrets.py  server.py  ssh.py  util.py
chi/: __init__.py  auth.py  clients.py  container.py  context.py  exception.py  generate_notebooks.py  generate_notebooks_config.py  hardware.py  image.py  jupyterhub.py  keypair.py  lease.py  magic.py  network.py  networking_api_examples.py  quicknode.py  reservation_api_examples.py  reservation_api_examples_generate_notebook.py  server.py  server_api_examples.py  share.py  ssh.py  storage.py  util.py  widgets.py
chi/.ipynb_checkpoints/: .swp  network-checkpoint.py
docs/: conf.py  examples.rst  generate_notebook.py  generate_notebooks.py  generate_notebooks_config.py  getting-started.rst  index.rst  requirements.txt
docs/_templates/: page.html
docs/modules/: clients.rst  container.rst  context.rst  exception.rst  hardware.rst  image.rst  lease.rst  magic.rst  network.rst  server.rst  share.rst  ssh.rst  storage.rst  widgets.rst
docs/source/: conf.py  index.rst  instance-management.rst  lease-management.rst  orchestration.rst
hammers/: __init__.py  colors.py  diagnostics.py  mycnf.py  mysqlargs.py  mysqlshim.py  osapi.py  osrest.py  query.py  slack.py  util.py
hammers/osrest/: __init__.py  blazar.py  glance.py  ironic.py  keystone.py  neutron.py  nova.py
hammers/scripts/: conflict_macs.py  curiouser.py  ipmi_retry.py  maintenance_reservation.py  neutron_reaper.py  reaper.py  stale_ports.py  unbound_instances.py  undead_instances.py
tests/: test_container.py  test_context.py  test_lease.py  test_network.py  test_server.py  test_share.py  test_ssh.py  test_widgets.py
