[metadata]
name = python-chi
version = file: VERSION
summary = Helper library for Chameleon testbed
long_description = file: README.rst
author = University of Chicago
author-email = dev@lists.chameleoncloud.org
home-page = https://www.chameleoncloud.org

[options]
packages = find:
install_requires =
  fabric
  keystoneauth1
  paramiko
  python-blazarclient
  python-glanceclient
  python-neutronclient
  python-novaclient
