[metadata]
name = python-chi
summary = Helper library for Chameleon Infrastructure (CHI) testbed
description-file = README.rst
author = University of Chicago
author-email = dev@lists.chameleoncloud.org
home-page = https://www.chameleoncloud.org
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
  chi

[options]
install_requires =
  fabric
  keystoneauth1
  paramiko
  python-blazarclient
  python-glanceclient
  python-neutronclient
  python-novaclient
